visitor slider color border alignment fix

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -917,7 +917,8 @@ line3 {
     position: relative !important;
     vertical-align: middle !important;
     width: 53px !important;
-    margin-top: 0 !important;
+    margin-top: -1px !important;
+    margin-left: -1px !important;
     z-index: 9 !important;
     display: inline-block !important;
 }
@@ -927,19 +928,19 @@ line3 {
 }
 
 .visitor_profile.visitor_qr_scan_class {
-    border: 3px solid orange !important;
+    border: 4px solid orange !important;
 }
 
 .visitor_profile.visitor_check_in_class {
-    border: 3px solid green !important;
+    border: 4px solid green !important;
 }
 
 .visitor_profile.visitor_check_out_class {
-    border: 3px solid blue !important;
+    border: 4px solid blue !important;
 }
 
 .visitor_profile.defaultVisitorClass {
-    border: 3px solid yellow !important;
+    border: 4px solid yellow !important;
 }
 .lslide
 {
